# HighNoon-Language-Framework

./: .gitattributes  .gitignore  ANALYSIS_TOKENIZER_COMPUTE.md  CHANGELOG.md  HD_STREAMING_ANALYSIS.md  LICENSE  README.md  RUFF_ERRORS.md  compliance_report.txt  debug_hpo_nan_results.json  input_list.conf  metric_list.conf  pid.conf  pid.conf.bak.20251224_235906  pid.conf.bak.20251225_001740  pid.conf.bak.20251225_012823  pid.conf.bak.20251229_203430  pyproject.toml  requirements.txt  state_space.conf
artifacts/: curricula.json  curriculum_presets.json  hpo_meta_cache.db
artifacts/hpo_trials/: oversized_configs.jsonl  sweep_153587c9_config.json  sweep_2add627d_config.json  sweep_3527526c_config.json  sweep_48cf872d_config.json  sweep_62f9dd93_config.json  sweep_8de295b7_config.json  sweep_923e25a5_config.json  sweep_a6766315_config.json  sweep_ab733418_config.json  sweep_c4153d5e_config.json  sweep_c4153d5e_training_config.json  sweep_e9a9d760_config.json  sweep_ed48d074_config.json  sweep_ef7cddb1_config.json
benchmarks/: __init__.py  __main__.py  bench_activation_stats.py  bench_arc.py  bench_architecture.py  bench_comparison.py  bench_confidence.py  bench_gradient_flow.py  bench_gsm8k.py  bench_hellaswag.py  bench_humaneval.py  bench_leaderboard.py  bench_long_context.py  bench_memory.py  bench_mmlu.py  bench_needle_haystack.py  bench_numerical_stability.py  bench_perplexity.py  bench_quantum.py  bench_scaling.py  bench_throughput.py  bench_truthfulqa.py  bench_winogrande.py  benchmark_cache.py  benchmark_config.py  benchmark_harness.py  datasets.py  generate_report.py  hardware_detection.py  model_builder.py  native_ops_bridge.py  optimizer_benchmark.py  verify_architecture.py
benchmarks/reports/: cache_benchmark_20251226_001132.md  hardware_info.md
docs/: RELEASE_NOTES.md  cluster_setup.md  distributed_training.md  enterprise-upgrade.md  getting-started.md  index.md
docs/api/: cli.md  config.md  inference.md  models.md  tokenization.md  training.md
docs/guides/: agent-tools.md  curriculum-learning.md  hpo.md  miu.md  training.md  webui.md
examples/: codex_cli.py  curriculum_training.py  custom_tools.py  distributed_training.py  quick_inference.py
highnoon/: __init__.py  attribution.py  config.py  hd_serialization.py  quantum_config.py  serialization.py
highnoon/_native/: CMakeLists.txt  __init__.py  _limits.py  build_secure.sh  fused_differential_attention_op.py  fused_mod_routing_op.py  fused_native_sparse_attention_op.py
highnoon/_native/controllers/: twin_mpc.py
highnoon/_native/ops/: __init__.py  alphaqubit_ops.py  cayley_transform.py  circular_conv_op.py  dtc_ops.py  entropy_regularization_ops.py  fused_adaptive_memory_op.py  fused_coconut_ops.py  fused_collapse_op.py  fused_continuous_thought_op.py  fused_depthwise_conv1d.py  fused_flash_attention_op.py  fused_gqa_op.py  fused_latent_kv_attention_op.py  fused_latent_reasoning_op.py  fused_linear_attention_op.py  fused_linear_gqa_op.py  fused_local_attention_op.py  fused_memory_bank_op.py  fused_memory_builder_enhancements_op.py  fused_moe_dispatch_op.py  fused_quls_loss_op.py  fused_self_consistency_op.py  fused_speculative_op.py  fused_streaming_op.py  fused_superposition_moe_op.py  fused_superposition_slots_op.py  fused_tensor_layers_op.py  fused_text_tokenizer.py  fused_unified_quantum_block_op.py  fused_wavelet_encoder.py  fused_wlam_op.py  hd_fisher_compression.py  hd_gradient_compression.py  hd_gradient_projection.py  hd_hierarchical_block_ops.py  hd_holographic_attention.py  hd_spectral_entropy.py  hd_state_buffer.py  hopfield_memory_op.py  (+29 more)
highnoon/_native/ops/fused_hnn_sequence/: __init__.py
highnoon/_native/ops/fused_hnn_step/: __init__.py
highnoon/api/: __init__.py  miu.py
highnoon/cli/: __init__.py  agent_runner.py  manifest.py  runner.py
highnoon/data/: __init__.py  create_tfrecords.py  hd_corpus.py  loaders.py  sequence_packer.py  streaming_tokenizer.py  tfrecord_cache.py
highnoon/inference/: __init__.py  qsg_generator.py  speculative.py  stateful_wrapper.py  streaming.py
highnoon/layers/: factored_vocab_embedding.py
highnoon/learning/: __init__.py  content_indexer.py  crystallized_optimizer.py  hd_learner.py  miu_controller.py
highnoon/licensing/: __init__.py
highnoon/models/: __init__.py  byte_stream_frontend.py  custom_attention.py  hamiltonian.py  hsmn.py  moe.py  monarch.py  tensor_layers.py
highnoon/qsg/: coconut_qsg.py  hd_compression.py  hopfield_vocab.py  mps_context.py  speculative_qsg.py  unified_controller.py  vqc_oracle_controller.py
highnoon/quantum/: __init__.py  coherence_bus.py  device_manager.py  layers.py  noise.py  qbm.py  qgan.py  runtime.py  tensor_ring_vqc.py  unified_bus.py
highnoon/retrieval/: __init__.py  rag_module.py
highnoon/runtime/: __init__.py  control_limits.py
highnoon/services/: __init__.py  aci.py  agent_server.py  hpo_asha.py  hpo_automl.py  hpo_bridge.py  hpo_distributed.py  hpo_fanova_advanced.py  hpo_grouped_sampling.py  hpo_importance.py  hpo_manager.py  hpo_meta_cache.py  hpo_metrics.py  hpo_multi_fidelity.py  hpo_nas.py  hpo_optuna_sampler.py  hpo_pbt.py  hpo_schedulers.py  hpo_shapley.py  hpo_surrogate.py  hpo_surrogate_gp.py  hpo_theoretical.py  hpo_training_bridge.py  hpo_trial_runner.py  hpo_utils.py  quantum_hpo_scheduler.py  scheduler_factory.py  sweep_executor.py  tooling.py
highnoon/telemetry/: __init__.py  energy_monitor.py  full_spectrum.py  metrics_collector.py  opentelemetry_tracer.py  prometheus_exporter.py  tokenizer_monitor.py
highnoon/tokenization/: __init__.py  qwt_text_tokenizer.py  (+4 more)
scripts/: analyze_codebase.py  benchmark_trained.sh  benchmark_untrained.sh  debug_hpo_nan.py  debug_hpo_sweep_webui.py  debug_hpo_training.py  debug_hpo_trial_exact.py  enterprise_training_engine_audit.py  generate_pydantic_models.py  hpo_grouped_sampling.py  input_list.conf  launch_distributed.sh  launch_webui.sh  metric_list.conf  parameter_comparison.py  parameter_comparison_report.json  pid.conf  pid.conf.bak.20251227_012217  pid.conf.bak.20251227_014413  setup.sh  state_space.conf  validate_control_configs.py
(+265 files in other folders)
